# bachelor-formally-verified-stuff

./: Cargo.toml  LICENSE  README.md
.fstar-cache/checked/: Alloc.Alloc.fst.checked  Alloc.Boxed.fst.checked  Alloc.Slice.fsti.checked  Alloc.String.fst.checked  Alloc.Vec.Drain.fsti.checked  Alloc.Vec.Into_iter.fsti.checked  Alloc.Vec.fst.checked  Bachelor_formally_verified_stuff.Bundle.fst.checked  Bachelor_formally_verified_stuff.Convert.fst.checked  Bachelor_formally_verified_stuff.Linalg.fst.checked  Bachelor_formally_verified_stuff.Polynomium.fst.checked  Bachelor_formally_verified_stuff.fst.checked  Bachelor_formally_verified_stuff.fsti.checked  Core.Array.fsti.checked  Core.Clone.fst.checked  Core.Cmp.fsti.checked  Core.Convert.fst.checked  Core.Default.fsti.checked  Core.Fmt.Rt.fsti.checked  Core.Fmt.fsti.checked  Core.Iter.Adapters.Enumerate.fst.checked  Core.Iter.Adapters.Flatten.fsti.checked  Core.Iter.Adapters.Map.fsti.checked  Core.Iter.Adapters.Rev.fsti.checked  Core.Iter.Adapters.Step_by.fst.checked  Core.Iter.Adapters.Take.fsti.checked  Core.Iter.Adapters.Zip.fsti.checked  Core.Iter.Sources.Repeat_with.fsti.checked  Core.Iter.Traits.Collect.fst.checked  Core.Iter.Traits.Iterator.fst.checked  Core.Iter.fsti.checked  Core.Marker.fst.checked  Core.Num.Error.fsti.checked  Core.Num.fsti.checked  Core.Ops.Arith.fsti.checked  Core.Ops.Control_flow.fst.checked  Core.Ops.Deref.fst.checked  Core.Ops.Index.fst.checked  Core.Ops.Range.fsti.checked  Core.Ops.fst.checked  (+22 more)
src/: convert.rs  linalg.rs  main.rs  main_THISWORKS.rs  polynomium.rs  scalar_test.rs
(+8 files in other folders)
